--- a/css/files.css
+++ b/css/files.css
@@ -29,6 +29,185 @@ header form {
 	line-height: 1;
 }
 
+
+input[type="text"],input[type="password"] {
+	margin: 2pt;
+	padding: 0px 2pt;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	height: 1.8em;
+}
+
+input[type="range"] {
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	margin: 2pt 6pt;
+	padding: 0px;
+	height: 10pt;
+	border: none;
+	outline: none;
+	background-color: transparent;
+}
+input[type=range]::-webkit-slider-runnable-track {
+	width: 100%;
+	height: 2pt;
+	border: none;
+	cursor: pointer;
+	background: #fff;
+}
+input[type=range]::-moz-range-track {
+	width: 100%;
+	height: 2pt;
+	border: none;
+	cursor: pointer;
+	background: #fff;
+}
+input[type=range]::-ms-track {
+	width: 100%;
+	height: 2pt;
+	border: none;
+	cursor: pointer;
+	background: #fff;
+}
+input[type="range"]::-webkit-slider-thumb {
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	cursor: pointer;
+	border: none;
+	border-radius: 50%;
+	width: 12px;
+	height: 12px;
+	margin-top: -3.5pt;
+	background-color: #fff;
+}
+input[type="range"]::-webkit-slider-thumb:hover {
+	background-color: #8af;
+}
+input[type="range"]::-moz-range-thumb {
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	cursor: pointer;
+	border: none;
+	border-radius: 50%;
+	width: 12px;
+	height: 12px;
+	margin-top: -3.5pt;
+	background-color: #fff;
+}
+input[type="range"]::-moz-range-thumb:hover {
+	background-color: #8af;
+}
+input[type="range"]::-ms-thumb {
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	cursor: pointer;
+	border: none;
+	border-radius: 50%;
+	width: 12px;
+	height: 12px;
+	margin-top: 0pt;
+	background-color: #fff;
+}
+input[type="range"]::-ms-thumb:hover {
+	background-color: #8af;
+}
+
+input[type=checkbox].toggle {
+	appearance: none;
+	cursor: pointer;
+	-webkit-tap-highlight-color: transparent;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	position: relative;
+	display: inline-block;
+	vertical-align: text-bottom;
+	padding: 0;
+	margin: 0;
+	height: 24px;
+	width: 52px;
+	border: 2px solid #aaaaaa;
+	border-radius: 999px;
+	background: #bbbbbb;
+	transition: all 0.1s ease;
+}
+input[type=checkbox].toggle:focus {
+	outline: 0;
+}
+input[type=checkbox].toggle:after {
+	content: "";
+	position: absolute;
+	top: 2px;
+	left: 2px;
+	width: 20px;
+	height: 20px;
+	border-radius: 50%;
+	background: white;
+	transition: all 0.1s cubic-bezier(0.5, 0.1, 0.75, 1.35);
+}
+input[type=checkbox].toggle:checked {
+	border-color: #00aa00;
+	background: white;
+}
+input[type=checkbox].toggle:checked:after {
+	transform: translatex(27px);
+	background: #00ff00;
+}
+
+select {
+	margin: 2pt;
+	padding: 0px 2pt;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	height: 1.8em;
+}
+
+label {
+	user-select: none;
+	-webkit-user-select: none;
+}
+textarea {
+	width: 400pt;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	min-height: 5em;
+	resize: vertical;
+}
+button {
+	margin: 2pt;
+	padding: 1pt;
+	border-radius: 3px;
+	border: 1px solid #bbb;
+	user-select: none;
+}
+.attach_left {
+	margin-left: -1px;
+	border-top-left-radius: 0px;
+	border-bottom-left-radius: 0px;
+}
+.attach_right {
+	margin-right: 0px !important;;
+	border-top-right-radius: 0px !important;;
+	border-bottom-right-radius: 0px !important;;
+}
+.attach_right + * {
+	margin-left: -1px !important;
+	border-top-left-radius: 0px !important;
+	border-bottom-left-radius: 0px !important;
+}
+
+fieldset.group {
+	border: 2px solid #bbb;
+	border-radius: 5px;
+}
+
+fieldset.group legend {
+	margin-left: 10pt;
+}
+
 #search_keyword {
 	font-size: 12pt;
 	height: 18pt;
@@ -247,6 +426,13 @@ header form {
 		transition: transform 0.2s ease-out;
 		position: absolute;
 	}
+}
+
+#main-pane #add-item-button {
+	display: none;
+}
+#main-pane.writable-folder #add-item-button {
+	display: inline-block;
 }
 
 #main-pane .loading-spinner {
@@ -538,6 +724,18 @@ ul.grid {
 	margin: 0 3px;
 	padding: 0;
 }
+@media screen and (max-width: 580px) {
+	ul.grid {
+		grid-template-columns: repeat(auto-fill, 33%);
+		margin: 0 1px;
+	}
+}
+@media screen and (max-width: 320px) {
+	ul.grid {
+		grid-template-columns: repeat(auto-fill, 50%);
+		grid-auto-rows: 100pt;
+	}
+}
 
 ul.grid li {
 	position: relative;
@@ -547,7 +745,7 @@ ul.grid li {
 	border-radius: 4pt;
 	list-style-type: none;
 	padding: 0;
-	margin: 0 1pt;
+	margin: 0 1px;
 	box-sizing: border-box;
 	line-height: 1.1;
 	overflow: hidden;
